add_executable(testOpt testOpt.cpp)
add_executable(runDescent runDescent.cpp)
add_executable(findMerge findMerge.cpp)
add_executable(makeGraphviz makeGraphviz.cpp)
add_executable(getDistance getDistance.cpp)

target_link_libraries(testOpt continuation)
target_link_libraries(runDescent continuation)
target_link_libraries(findMerge continuation)
target_link_libraries(makeGraphviz graphviz continuation)
target_link_libraries(getDistance continuation)
